remove gh pages conifg

--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "digital-kiosk-sunshower",
-  "homepage": "https://noaahsenteur.github.io/digitale-kiosk-sunshower",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
@@ -19,7 +16,6 @@
     "@react-router/serve": "^7.7.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "gh-pages": "^6.3.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.544.0",
     "react": "^19.1.0",
